R1.3.4      04/19/2019    Kukhee Kim / Matt Weaver
            add fault buffer holdoff
            pick up latest sub-modules and  register name changes to follow up new yaml files

R1.3.3      02/12/2019    Kukhee Kim
            add Mps communication diagnostics - RxFrameErrorCount and RxFrameCount
            register name change in Pgp2bAxi.yaml

R1.3.2      08/27/2018    Kukhee Kim
            Bug fixing for setBaseDivisor()

R1.3.1      07/24/2018    Kukhee Kim
            Bumpup cpsw framework R3.6.4
            Bumpup bsa api R1.1.1
            Read out TxClCount from TimingFrameRx to detect RF clcok disruption

R1.3.0      03/21/2018    Kukhee Kim
            Bumpup cpsw framework R3.6.3
            Bumpup bsa api R1.1.0

R1.2.8      11/27/2017    Kukhee Kim / Matt Weaver
            Add mps link/communication diagnostics API
            Fix return value for sequence_engine::cache(int); remove exception
            Make common sequser.py python import
            Added instruction cache query methods

R1.2.7      11/15/2017    Matt Weaver
            Add sample user sequencing scripts
            Add hps_peek for examining timing
            Add yamlb for backdoor access (port 8192)
            Add scripts for control sequence setup
            Add timing margin analysis to generic hps tools

R1.2.6      10/25/2017    Kukhee Kim (KHKIM)
            let epics creates the irq polling thread with RT priority
            put a bandage to ignore BSA complete irq and let epics handles the BSA complete and Ack
            Added timing eyescan app (Matt Weaver)


R1.2.5      09/27/2017    Matt Weaver (WEAVER)
            fix irq thread to ack BSA irq even if not handled
            added to dump() print out
            added template yaml archive for generic HPS checkout
            fixes for AC rates
            Add example sequence script seq_setup.py
            Add rate monitor test GUI
            fix bsa_ca.py for new PV names