@@ -1,9 +1,9 @@
 CCACHE_DISABLE=1
 
 
-CPSW_DIR=/afs/slac/g/lcls/package/cpsw/framework/R3.6.4/src
+CPSW_DIR=/afs/slac/g/lcls/package/cpsw/framework/R4.1.0/src
 BSA_DIR=/afs/slac/g/lcls/package/timing/bsa
-BSA_VERSION=R1.1.1
+BSA_VERSION=R1.1.3
 BSA=$(BSA_DIR)/$(BSA_VERSION)
 
 # may override CPSW_DIR / DEVICELIB_DIR from release.mak
@@ -16,7 +16,7 @@ include $(CPSW_DIR)/defs.mak
 #LDFLAGS+= -Wl,-Bstatic -static-libgcc
 LDFLAGS+=-L$(BSA)/$(TARCH)/lib
 
-INCLUDE_DIRS = $(BSA)/$(TARCH)/include
+INCLUDE_DIRS += $(BSA)/$(TARCH)/include
 INSTALL_DIR=../
 
 CXXFLAGS = -g -DFRAMEWORK_R3_4
