@@ -1,3 +1,6 @@
+R1.3.5      06/25/2019    Kukhee Kim
+            build with cpsw/framework R4.1.0 and bsa R1.1.3
+
 R1.3.4      04/19/2019    Kukhee Kim / Matt Weaver
             add fault buffer holdoff
             pick up latest sub-modules and  register name changes to follow up new yaml files
